--- a/views/home.ejs
+++ b/views/home.ejs
@@ -6,13 +6,7 @@
         <section style="margin-bottom: 15px;">
             <select id="countrypicker" onchange="getPickersInfo()" class="selectpicker countrypicker mt-5"
                 data-default="BR"></select>
-
-            <section class="float-right">
-                <button class="btn btn-success mt-5" style="max-height: 50px;" disabled> Comparar com
-                    &nbsp; <i class=" fas fa-exchange-alt"></i>
-                </button>
-                <select class="selectpicker countrypicker mt-5" data-default="BR"></select>
-            </section>
+        
         </section>
 
         <!--Card do gráfico-->
@@ -25,10 +19,10 @@
                 <canvas id="myChart" class="mt-5"></canvas>
             </div>
 
-            <div class="card-footer text-muted text-center">
+            <div class=" text-muted text-center">
                 <p>Fique em quarentena, tome cuidado e não saia de casa pela sua própria saúde</p>
                 <a href="https://twitter.com/MicaelEffects"><i class="fab fa-twitter ml-3 mt-2"></i></a>
-                <a href="https://github.com/Micazera"><i class="fab fa-github"></i></a>
+                <a href="https://github.com/Micazeera"><i class="fab fa-github"></i></a>
                 <a href="https://instagram.com/micagomes.js/"><i class="fab fa-instagram"></i></a>
             </div>
 
